# C

./: CMakeLists.txt  README.md
C++/: Hello World.cpp  welcome.cpp
C++/变量和数据类型/: data_type.cpp  variable.cpp
C++/流程控制语句/: continue.cpp  for.cpp  goto.cpp  guess_number.cpp  heart.cpp  if.cpp  jump_statement.cpp  multiply_table.cpp  prime_number.cpp  switch.cpp  while.cpp
C++/运算符/: operator.cpp
C语言/: 99乘法表.c  n的阶乘-for.c  n的阶乘.c  三个数按升序排序.c  买苹果.c  二维数组1.c  二维数组之元素互换.c  二维数组之打印正方形左下半角.c  二维数组之最大数.c  二维数组之杨辉三角.c  二维数组之求平均数.c  倒三角.c  冒泡排序法.c  函数之交换.c  函数之分糖果.c  函数之参数的传递.c  函数之平均值.c  函数之求前n项数组的平均数.c  函数之递归.c  函数初步.c  判断是否为闰年.c  判断素数.c  判断范围素数.c  反弹.c  各位数之和等于5.c  同构数.c  大小比较.c  字符数组.c  字符数组之happy.c  字符数组之升序名单.c  字符数组之插入.c  字符数组之英文句子.c  字符数组之连接.c  完数运算.c  尊嘟假嘟.c  打印.c  打印正三角形.c  数组实战.c  数组求5个学生成绩.c  数组的初始化和数组的打印.c  (+15 more)
C语言程序设计/: 打印菱形-中空.c  指针之数组元素移动问题.c  指针值的交换.c  语法错误.c
C语言程序设计/C语言预测卷/: 不算偶数的阶乘.c  奇怪的宏定义.c
C语言程序设计/C语言预测卷/卷1/: 卷1-程序填空 21.c  卷1-程序填空 22.c  卷1-程序设计 24.c  卷1-程序设计 25.c  卷1-程序运行输出结果 18.c  程序填空 23.c  程序运行输出结果 19.c  程序运行输出结果 20.c  表达式的值 1.c
C语言程序设计/C语言预测卷/卷10/: 卷10-填空题 10.c  卷10-程序分析题 1.c  卷10-程序分析题 2.c  卷10-程序分析题 3.c  卷10-程序分析题 4.c  卷10-程序填空题 1.c  卷10-程序填空题 2.c  卷10-编程题 1.c  卷10-编程题 2.c
C语言程序设计/C语言预测卷/卷2/: 卷2-填空题 7.c  卷2-程序填空 18.c  卷2-程序填空 21.c  卷2-程序填空 22.c  卷2-程序填空 23.c  卷2-程序设计 24.c  卷2-程序设计 25.c  卷2-读程序写结果 19.c  卷2-读程序写结果 20.c
C语言程序设计/C语言预测卷/卷3/: 卷3-填空题 10.c  卷3-程序填空 20.c  卷3-程序填空 21.c  卷3-程序填空 22.c  卷3-程序设计 24.c  卷3-程序设计 25.c  卷3-读程序写结果 16.c  卷3-读程序写结果 17.c  卷3-读程序写结果 18.c  卷3-读程序写结果 19.c
C语言程序设计/C语言预测卷/卷4/: 卷4-填空题 2.c  卷4-填空题 7.c  卷4-程序填空 21.c  卷4-程序填空 22.c  卷4-程序填空 23.c  卷4-程序设计 24.c  卷4-程序设计 25.c  卷4-读程序写结果 16.c  卷4-读程序写结果 17.c  卷4-读程序写结果 18.c  卷4-读程序写结果 19.c  卷4-读程序写结果 20.c  数组指针进1测试-20题.c  整型转字符型运算测试-18题.c
C语言程序设计/C语言预测卷/卷5/: 卷5-程序填空 21.c  卷5-程序填空 22.c  卷5-程序填空 23.c  卷5-程序设计 24.c  卷5-程序设计 25.c  卷5-读程序写结果 16.c  卷5-读程序写结果 17.c  卷5-读程序写结果 18.c  卷5-读程序写结果 19.c  卷5-读程序写结果 20.c
C语言程序设计/C语言预测卷/卷6/: 卷6-填空题 11.c  卷6-填空题 15.c  卷6-填空题 16.c  卷6-填空题 17.c  卷6-程序设计 1.c  卷6-程序设计 2.c  卷6-读程序题 1.c  卷6-读程序题目 2.c  卷6-读程序题目 3.c  卷6-读程序题目 4.c  卷6-读程序题目 5.c
C语言程序设计/C语言预测卷/卷7/: 卷7-填空题 26.c  卷7-填空题 27.c  卷7-编程题 1.c  卷7-编程题 2.c  卷7-编程题 3.c
C语言程序设计/C语言预测卷/卷8/: 卷8-填空题 8.c  (+5 more)
C语言程序设计/选择结构/: 三元运算符输出最大值.c  字符串长度.c  字符串长度.cpp  小于1000的正数输出它的平方根.c  数学函数求值.c  输出3个数中最大的那个数.c  逻辑表达式的值.c
EasyX/: cir.cpp
位运算/: 原码反码补码.c
函数/: 3x3数组转置.c  ax2+bx+c=0.c  function claims.h  function proclaim.c  函数之公约数与公倍数.c  函数之素数.c  函数声明.c  函数的传参.c  函数的返回值.c  初识函数.c  反序存放.c  同名.c  外部变量引用.c  外部链接.c  外部链接引用.c  字符串连接.c  嵌套调用.c  成绩.c  数组参数.c  数组参数之平均成绩.c  汉诺塔问题.c  递归调用.c  递归阶乘.c  静态局部变量.c  静态局部变量阶乘.c
头文件/: include指令.h  条件编译.h
循环结构/: 三位相加.c  不能被3整除的数.c  乒乓对决.c  二分法.c  位数相加.c  前20项和.c  完数运算.c  循环类型.txt  捐款.c  斐波那契数列-改进.c  斐波那契数列.c  最大公约数与最小公倍数其一.c  最大公约数与最小公倍数其二.c  水仙花数.c  牛顿迭代法.c  猴子吃桃问题.c  矩阵.c  素数-存疑.c  素数-开方重构.c  素数-范围统计.c  素数.c  统计字符中的元素个数.c  落地反弹.c  计算1加到100.c  译密码.c  输出菱形图案.c  近似值.c  迭代法.c  递归求最大公约数.c  阶乘相加.c
抽象代码/: Erik_Tse(bilibili).c  尊嘟假嘟  尊嘟假嘟.cpp  求和.cpp
指针/: void指针类型.c  一般字符串复制.c  二维数组指针输出.c  函数变量变更.c  初识指针.c  动态内存分配与指向它的指针.c  参数交换.c  字符型指针变量作实参.c  字符型指针变量作形参和实参.c  字符数组作函数参数.c  指向函数的指针作函数参数.c  指向指针数据的指针变量.c  指向数组的指针.c  指向数组的指针之一维查找.c  指针变量导出数组元素.c  指针变量指向多个函数.c  指针变量调用函数.c  指针字符串复制.c  指针引用数组元素.c  指针指向一维数组取值.c  指针数组.c  指针的用处.c  排序.c  改变指针变量的值.c  相反存放.c  返回指针值的函数.c  顺序输出.c
数据/: 1.c  三角形的面积.c  不同数据之间的运算+强制转换类型.c  圆的相关计算.c  圆的相关计算存疑.c  存款利息其一.c  存款利息其二.c  密码译文.c  方程的根.c  计算国民生产总值.c  购房还款.c
数组/: Fibonacci数列问题.c  三三矩阵对角线之和.c  二维数组之行列互换.c  二维数组之鞍点.c  二维数组菱形.c  冒泡排序法.c  字符串处理函数.c  字符串最大者.c  字符数组输入输出.c  幻方(魔方阵列).c  排序插入.c  杨辉三角.c  矩阵擂台求最大.c  筛选素数.c  统计单词.c  输出字符串.c  逆序存放.c
文件/: fgetc与fputc.c  fgets和fputs.c  fprintf与fscanf.c  fread与fwrite.c  fseek实用案列.c  rewind和fseek.c  rewind和fseek以及ftell.c  位运算.c  写入文件.c  初识文件.c  文件读写字符.c
文件/file/: copy_one.txt  date.txt
构建数据类型/: 指向结构体数组的指针.c  结构体变量和结构体变量的指针作函数参数.c  结构体变量应用.c  结构体指针.c  结构体数组+选择排序.c  结构体数组.c  结构体类型变量.c
洛谷/: B2054 求平均年龄.c  B2060 满足条件的数累加.c  B2062 乘方计算.c  B2063 人口增长问题.c  B2065 鸡尾酒疗法.c  B2073  求小数的某一位.c  B2076 球弹跳的高度.c  P5743 猴子吃桃.c
洛谷/函数/: B2127 求正整数 2 和 n 之间的完全数.c  B2128 素数个数.c  B2129 最大数 max(x,y,z).c  B2130 简单算术表达式求值.c  B2131 甲流病人初筛.cpp
洛谷/循环/: B2055 均值.c  B2056 求整数的和与均值.c  B2057 最高的分数.c  B2058 奥运奖牌计数.c  B2059 奇数求和.c  B2061 整数的个数.c  B2064 斐波那契数列.c  B2066 救援.c  B2067 药房管理.c  B2068 统计满足条件的4位数.c  B2069 求分数序列和.c  B2070 计算分数加减表达式的值.c  B2071 余数相同问题.c  B2072 分苹果.c  B2074 求星期几.c  B2075 幂的末尾.c  B2077 角谷猜想.c  B2078 含k个3的数.c  B2079 求出e的值.c  B2080 计算多项式的值.c  B2081 与7无关的数.c  B2082 数字统计.c  B2083 画矩形.c  B2084 质因数分解.c  B2085 第n小的质数.c  B2086 不定方程的解.c  B2087 与指定数字相同的数的个数.c  B2088 计算书费.c  B3650 [语言月赛202208] 求和.c  B3651 [语言月赛202208] 数组调整.c  B3659 [语言月赛202209] 课程QQ群.c  B3660 [语言月赛202209] 集卡.c
真题/: 二维数组的最大元素以及所在行列.c  函数1.c  函数2.c  函数3.c  打印2~500之间所有素数，并求和.c  指针1.c  指针数组1.c  条件判断1.c  条件判断2.c  计算1.c
算法/: 传统平方根计算（迭代）.c  初识算法.txt  算法-1.c
纪元/: 何人绽放的花期.c
选择结构/: ax2+bx+c=0方程的解之选择结构终章.c  处理菜单命令.c  运算符与表达式  运算符与表达式.md  运算符与表达式.txt  运费折扣.c  选择结构之闰年-leap.c  阶跃函数.c
预处理/: include指令.c  宏定义.c  条件编译.c  条件编译之条件判断.c
(+5 files in other folders)
