cmake_minimum_required(VERSION 3.24)
project(C C)

set(CMAKE_C_STANDARD 11)

link_libraries(libeasyx.a)

file (GLOB files test/*.c)

foreach (file ${files})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
    add_executable (${exe} ${file})
    message (\ \ \ \ --\ src/${exe}.c\ will\ be\ compiled\ to\ bin/${exe})
endforeach ()

file (GLOB files test/*.cpp)

foreach (file ${files})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
    add_executable (${exe} ${file}
            预处理/宏定义.c
            预处理/宏定义.c
            C语言程序设计/C语言预测卷/不算偶数的阶乘.c
            "C语言程序设计/C语言预测卷/卷4/卷4-填空题 7.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-填空题 2.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-读程序写结果 16.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-读程序写结果 17.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-读程序写结果 18.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-读程序写结果 19.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-程序填空 21.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-程序填空 22.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-程序填空 23.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-程序设计 24.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-程序设计 25.c"
            "C语言程序设计/C语言预测卷/卷4/卷4-读程序写结果 20.c"
            C语言程序设计/C语言预测卷/卷4/数组指针进1测试-20题.c
            C语言程序设计/C语言预测卷/卷4/整型转字符型运算测试-18题.c
            C语言程序设计/打印菱形-中空.c
            "C语言程序设计/C语言预测卷/卷5/卷5-读程序写结果 16.c"
            "C语言程序设计/C语言预测卷/卷5/卷5-读程序写结果 17.c"
            "C语言程序设计/C语言预测卷/卷5/卷5-读程序写结果 18.c"
            "C语言程序设计/C语言预测卷/卷5/卷5-读程序写结果 19.c"
            "C语言程序设计/C语言预测卷/卷5/卷5-读程序写结果 20.c"
            "C语言程序设计/C语言预测卷/卷5/卷5-程序填空 21.c"
            "C语言程序设计/C语言预测卷/卷5/卷5-程序填空 22.c"
            "C语言程序设计/C语言预测卷/卷5/卷5-程序填空 23.c"
            "C语言程序设计/C语言预测卷/卷5/卷5-程序设计 24.c"
            "C语言程序设计/C语言预测卷/卷5/卷5-程序设计 25.c"
            C语言程序设计/指针值的交换.c
            "C语言程序设计/C语言预测卷/卷6/卷6-填空题 11.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-填空题 15.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-填空题 16.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-填空题 17.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-读程序题 1.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-读程序题目 2.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-读程序题目 3.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-读程序题目 4.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-读程序题目 5.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-程序设计 1.c"
            "C语言程序设计/C语言预测卷/卷6/卷6-程序设计 2.c"
            "C语言程序设计/C语言预测卷/卷7/卷7-填空题 26.c"
            "C语言程序设计/C语言预测卷/卷7/卷7-填空题 27.c"
            "C语言程序设计/C语言预测卷/卷7/卷7-编程题 1.c"
            "C语言程序设计/C语言预测卷/卷7/卷7-编程题 2.c"
            "C语言程序设计/C语言预测卷/卷7/卷7-编程题 3.c"
            "C语言程序设计/C语言预测卷/卷8/卷8-填空题 8.c"
            "C语言程序设计/C语言预测卷/卷8/卷8-程序填空 1.c"
            "C语言程序设计/C语言预测卷/卷8/卷8-程序填空 2.c"
            "C语言程序设计/C语言预测卷/卷8/卷8-编程题 1.c"
            "C语言程序设计/C语言预测卷/卷8/卷8-编程题 2.c"
            "C语言程序设计/C语言预测卷/卷8/卷8-编程题 3.c"
            C语言程序设计/C语言预测卷/奇怪的宏定义.c
            "C语言程序设计/C语言预测卷/卷9/卷9-编程题 4-1.c"
            "C语言程序设计/C语言预测卷/卷9/卷9-编程题 4-2.c"
            "C语言程序设计/C语言预测卷/卷9/卷9-编程题 4-3.c"
            "C语言程序设计/C语言预测卷/卷9/卷9-编程题 5-1（自创）.c"
            "C语言程序设计/C语言预测卷/卷9/卷9-编程题 5-2.c")
    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
endforeach ()

